--- a/Kubernets_config_files/mysql-svc.yaml
+++ b/Kubernets_config_files/mysql-svc.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: mysql-svc
   name: mysql-svc
 spec:
   ports:
-  - name: mysql-svc 
-    port: 3306
-    protocol: TCP
-    targetPort: 3306      
+  - port: 3306
+    targetPort: 3306
   selector:
-    app: mysql-sts  
+    run: mysql-pod     # ✅ This must match db-pod.yaml
   type: ClusterIP
+
