--- a/Kubernets_config_files/part2/app-chart/templates/app-deployment.yaml
+++ b/Kubernets_config_files/part2/app-chart/templates/app-deployment.yaml
@@ -17,7 +17,7 @@ spec:
       imagePullSecrets:
       - name: registery-credenial            
       containers:
-      - image: registry.gitlab.com/d6245/app-k8s/app-login:v1 
+      - image: gangapratheep/node-app:latest 
         name: node-app
         envFrom:
         - configMapRef:
